repo/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc

spec:
  selector:
    app: prometheus-deployment
  type: NodePort
  ports:
  - nodePort: 31001
    port: 9090
    targetPort: 9090
